--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "express-partials": "^0.3.0",
     "http-errors": "~1.6.2",
     "morgan": "~1.9.0",
-    "mysql": "^2.15.0"
+    "mysql": "^2.15.0",
+    "request": "^2.87.0",
+    "xml": "^1.0.1",
+    "xml2js": "^0.4.19"
   }
 }
